<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="#636363"
    tools:context=".Fragments.CotizacionesFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textViewCom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:paddingTop="3dp"
        android:textSize="21dp"
        android:layout_gravity="right"
        android:textStyle="bold"
        android:text="@string/compra" />

    <TextView
        android:id="@+id/textViewVen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:paddingTop="3dp"
        android:textSize="21dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:text="@string/venta" />
    
    <ListView
        android:id="@+id/listView"
        android:paddingTop="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/av_bottom_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:background="#66000000"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_home_footer"
        android:layout_gravity="bottom|center_horizontal" />

</FrameLayout>