<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c7c7c7"
    tools:context=".Fragments.ContactoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_below="@+id/textViewTitulo"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_centerHorizontal="true"
             android:text="@string/desccontacto" />

        <TextView
            android:id="@+id/textViewDescFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewDesc"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/desccontactofin" />


    </RelativeLayout>

</FrameLayout>